Archive2/5c/9666ed2eb528f0/output
In file included from /usr/include/c++/4.8/cstdint:35:0,
                 from main.cpp:5:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp:8:23: error: expected type-specifier before ‘uint32_t’
     explicit operator uint32_t() { return 0; }
                       ^
main.cpp: In function ‘int main()’:
main.cpp:12:29: error: invalid static_cast from type ‘X’ to type ‘int’
     static_cast< int >( X() );
                             ^
